# SARIF_FSE23

./: .gitattributes  README.md
Demo/distributed_camera/: OAT.xml  bundle.json  distributedcamera.gni
Demo/distributed_camera/camera_hdf/hdi_impl/: BUILD.gn
Demo/distributed_camera/camera_hdf/hdi_impl/include/dcamera_device/: dcamera_device.h  dmetadata_processor.h
Demo/distributed_camera/camera_hdf/hdi_impl/include/dcamera_host/: dcamera_host.h
Demo/distributed_camera/camera_hdf/hdi_impl/include/dcamera_provider/: dcamera_provider.h
Demo/distributed_camera/camera_hdf/hdi_impl/include/dstream_operator/: dbuffer_manager.h  dcamera_steam.h  dimage_buffer.h  doffline_stream_operator.h  dstream_operator.h
Demo/distributed_camera/camera_hdf/hdi_impl/include/utils/: constants.h  dcamera.h
Demo/distributed_camera/camera_hdf/hdi_impl/src/dcamera_device/: dcamera_device.cpp  dmetadata_processor.cpp
Demo/distributed_camera/camera_hdf/hdi_impl/src/dcamera_host/: dcamera_host.cpp
Demo/distributed_camera/camera_hdf/hdi_impl/src/dcamera_provider/: dcamera_provider.cpp
Demo/distributed_camera/camera_hdf/hdi_impl/src/dstream_operator/: dbuffer_manager.cpp  dcamera_steam.cpp  dimage_buffer.cpp  doffline_stream_operator.cpp  dstream_operator.cpp
Demo/distributed_camera/camera_hdf/hdi_impl/src/utils/: dcamera.cpp
Demo/distributed_camera/camera_hdf/hdi_impl/test/: BUILD.gn  common.cpp  common.h  dcamera_hdi_sample.cpp
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/: ipc_data_utils.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/client/: BUILD.gn
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/client/device/: dcamera_device_callback.cpp  dcamera_device_callback.h  dcamera_device_callback_stub.cpp  dcamera_device_callback_stub.h  dcamera_device_proxy.cpp  dcamera_device_proxy.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/client/host/: dcamera_host_callback.cpp  dcamera_host_callback.h  dcamera_host_callback_stub.cpp  dcamera_host_callback_stub.h  dcamera_host_proxy.cpp  dcamera_host_proxy.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/client/operator/: doffline_stream_operator_proxy.cpp  doffline_stream_operator_proxy.h  dstream_operator_callback.cpp  dstream_operator_callback.h  dstream_operator_callback_stub.cpp  dstream_operator_callback_stub.h  dstream_operator_proxy.cpp  dstream_operator_proxy.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/client/provider/: dcamera_provider_callback.cpp  dcamera_provider_callback.h  dcamera_provider_callback_stub.cpp  dcamera_provider_callback_stub.h  dcamera_provider_proxy.cpp  dcamera_provider_proxy.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/config/host/: BUILD.gn  dcamera_host_config.cpp
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/config/provider/: BUILD.gn  dcamera_provider_config.cpp
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/server/device/: dcamera_device_callback_proxy.cpp  dcamera_device_callback_proxy.h  dcamera_device_stub.cpp  dcamera_device_stub.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/server/host/: dcamera_host_callback_proxy.cpp  dcamera_host_callback_proxy.h  dcamera_host_stub.cpp  dcamera_host_stub.h
Demo/distributed_camera/camera_hdf/interfaces/hdi_ipc/server/operator/: doffline_stream_operator_stub.cpp  doffline_stream_operator_stub.h  dstream_operator_stub.cpp  (+3 more)
Demo/distributed_camera/camera_hdf/interfaces/include/: idistributed_camera_provider.h  idistributed_camera_provider_callback.h  types.h
Demo/distributed_camera/common/: BUILD.gn
Demo/distributed_camera/common/include/constants/: distributed_camera_constants.h  distributed_camera_errno.h
Demo/distributed_camera/common/include/utils/: data_buffer.h  dcamera_index.h  dcamera_utils_tools.h
Demo/distributed_camera/common/src/utils/: data_buffer.cpp  dcamera_utils_tools.cpp
Demo/distributed_camera/interfaces/inner_kits/native_cpp/camera_sink/: BUILD.gn
Demo/distributed_camera/interfaces/inner_kits/native_cpp/camera_source/: BUILD.gn
Demo/distributed_camera/sa_profile/: 4803.xml  4804.xml  BUILD.gn
Demo/distributed_camera/services/cameraservice/base/include/: dcamera_capture_info_cmd.h  dcamera_channel_info_cmd.h  dcamera_event_cmd.h  dcamera_info_cmd.h  dcamera_metadata_setting_cmd.h  dcamera_open_info_cmd.h  dcamera_protocol.h  icamera_controller.h
Demo/distributed_camera/services/cameraservice/base/src/: dcamera_capture_info_cmd.cpp  dcamera_channel_info_cmd.cpp  dcamera_event_cmd.cpp  dcamera_info_cmd.cpp  dcamera_metadata_setting_cmd.cpp  dcamera_open_info_cmd.cpp
Demo/distributed_camera/services/cameraservice/cameraoperator/client/: BUILD.gn
Demo/distributed_camera/services/cameraservice/cameraoperator/handler/: BUILD.gn
Demo/distributed_camera/services/cameraservice/sinkservice/: BUILD.gn
Demo/distributed_camera/services/cameraservice/sourceservice/: BUILD.gn
Demo/distributed_camera/services/channel/: BUILD.gn
Demo/distributed_camera/services/channel/include/: dcamera_channel_sink_impl.h  dcamera_channel_source_impl.h  dcamera_softbus_adapter.h  dcamera_softbus_session.h  icamera_channel.h  icamera_channel_listener.h
Demo/distributed_camera/services/channel/src/: dcamera_channel_sink_impl.cpp  dcamera_channel_source_impl.cpp  dcamera_softbus_adapter.cpp  dcamera_softbus_session.cpp
Demo/distributed_camera/services/data_process/: BUILD.gn
Demo/distributed_camera/services/data_process/include/eventbus/: dcamera_codec_event.h  dcamera_pipeline_event.h
Demo/distributed_camera/services/data_process/include/interfaces/: data_process_listener.h  idata_process_pipeline.h
Demo/distributed_camera/services/data_process/include/pipeline/: abstract_data_process.h  dcamera_pipeline_sink.h  dcamera_pipeline_source.h
Demo/distributed_camera/services/data_process/include/utils/: image_common_type.h
Demo/distributed_camera/services/data_process/src/pipeline/: abstract_data_process.cpp  dcamera_pipeline_sink.cpp  dcamera_pipeline_source.cpp
Demo/distributed_camera/services/data_process/src/utils/: image_common_type.cpp
(+5486 files in other folders)
