# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedcamera_path = "//foundation/distributedhardware/distributedcamera"

distributedhardwarefwk_path = "//foundation/distributedhardware/distributedhardwarefwk"

hdf_framework_path = "//drivers/framework"

camera_hdf_path_baltimore = "//drivers/peripheral/adapter"

camera_hdf_path = "//drivers/peripheral"

display_hdf_path = "//drivers/peripheral/display"

camerastandard_path = "//foundation/multimedia/camera_standard"

mediastandard_path = "//foundation/multimedia/media_standard"

graphicstandard_path = "//foundation/graphic/standard"

common_path = "${distributedcamera_path}/common"

services_path = "${distributedcamera_path}/services"

innerkits_path = "${distributedcamera_path}/interfaces/inner_kits"

distributedcamera_hdf_path = "${distributedcamera_path}/camera_hdf"

fwk_utils_path = "${distributedhardwarefwk_path}/utils"

fwk_common_path = "${distributedhardwarefwk_path}/common"

fwk_services_path = "${distributedhardwarefwk_path}/services"

build_flags = [ "-Werror" ]
