# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributedhardware/distributedcamera/distributedcamera.gni")

ohos_shared_library("distributed_camera_channel") {
  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
  ]

  sources = [
      "src/dcamera_channel_sink_impl.cpp",
      "src/dcamera_channel_source_impl.cpp",
      "src/dcamera_softbus_adapter.cpp",
      "src/dcamera_softbus_session.cpp",
  ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "${common_path}:distributed_camera_utils",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcamerachannel\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "dsoftbus_standard:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}