# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributedcamera/distributedcamera.gni")

ohos_shared_library("distributed_camera_source_sdk") {
  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "include/callback",
    "${common_path}/include/constants",
  ]

  sources = [
    "src/callback/dcamera_source_callback.cpp",
    "src/callback/dcamera_source_callback_stub.cpp",
    "src/dcamera_source_handler.cpp",
    "src/dcamera_source_handler_ipc.cpp",
    "src/distributed_camera_source_proxy.cpp",
  ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcamerasourcekits\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
